--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
-
-
-
+/* @import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
 
 body {
   height: 100vh;
@@ -10,20 +7,20 @@ body {
   justify-content: center;
 
   background-size: 1000px;
-  background-image: url("https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg");
+  background-image: url('https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg');
   background-position: center center;
 }
 
 .paper {
-  background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
+  background-image: url('https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1');
   background-size: 500px;
   background-position: center center;
   padding: 20px 100px;
-/*  min-width: 800px; */
-  
+  min-width: 800px; 
+
   transform: rotateZ(-5deg);
-  box-shadow: 1px 15px 20px 0px rgba(0,0,0,0.5);
-  
+  box-shadow: 1px 15px 20px 0px rgba(0, 0, 0, 0.5);
+
   position: absolute;
 }
 
@@ -49,7 +46,7 @@ img {
 }
 
 .paper.heart::after {
-  content: "";
+  content: '';
   background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
   width: 100%;
   height: 100%;
@@ -65,9 +62,95 @@ img {
 p {
   font-family: 'Zeyada';
   font-size: 50px;
-  color: rgb(0,0,100);
+  color: rgb(0, 0, 100);
   opacity: 0.75;
   user-select: none;
-  
-  // filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9));
+
+filter: drop-shadow(2px 1.5px 1px rgba(0,0,105,0.9)); 
+} */
+
+@import url('https://fonts.googleapis.com/css2?family=Zeyada&display=swap');
+
+body {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-size: cover;
+  background-image: url('https://www.psdgraphics.com/wp-content/uploads/2022/01/white-math-paper-texture.jpg');
+  background-position: center center;
+  padding: 10px;
+  overflow: hidden;
+}
+
+.paper {
+  background-image: url('https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1');
+  background-size: cover;
+  background-position: center;
+  padding: 15px;
+  width: 90vw;
+  max-width: 400px;
+  transform: rotateZ(-3deg);
+  box-shadow: 1px 10px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.paper.heart {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+}
+
+.paper.image {
+  padding: 10px;
+}
+
+.paper.image p {
+  font-size: 5vw;
+  text-align: center;
+}
+
+img {
+  max-height: 150px;
+  width: 100%;
+  object-fit: contain;
+  user-select: none;
+}
+
+.paper.heart::after {
+  content: '';
+  background-image: url('https://cdn.pixabay.com/photo/2016/03/31/19/25/cartoon-1294994__340.png');
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.6;
+}
+
+p {
+  font-family: 'Zeyada', cursive;
+  font-size: 6vw;
+  color: rgb(0, 0, 100);
+  opacity: 0.75;
+  text-align: center;
+  filter: drop-shadow(2px 1.5px 1px rgba(0, 0, 105, 0.9));
+}
+
+@media (max-width: 500px) {
+  .paper {
+    transform: none;
+    padding: 10px;
+  }
+  .paper.heart {
+    width: 120px;
+    height: 120px;
+  }
+  p {
+    font-size: 7vw;
+  }
 }
